labs/lesson_37/k8s/ingress/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab37-ingress
  namespace: lab37
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lab37.local
      secretName: lab37-tls
  rules:
    - host: lab37.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab37-web
                port:
                  number: 8080
